--- a/BatchTesseractClient/BatchTesseractClient.csproj
+++ b/BatchTesseractClient/BatchTesseractClient.csproj
@@ -109,6 +109,7 @@
       <HintPath>..\packages\System.Spatial.5.6.2\lib\net40\System.Spatial.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
